--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,3 +1,28 @@
+- authors: Heiko Becker, Nikita Zyuzin, Raphael Monat, Eva Darulova, Magnus O. Myreen, and Anthony Fox
+  title: A Verified Certificate Checker for Floating-Point Error Bounds (under publication)
+  conference: Formal Methods in Computer-Aided Design (FMCAD)
+  year: 2018
+  abstract: Being able to soundly estimate roundoff errors in finite-precision computations is important for many applications in embedded systems and scientific computing. Due to the unintuitive nature of finite-precision arithmetic, automated static analysis tools are highly valuable for this task. The results, however, are only as correct as the implementations of the static analysis tools. This paper presents a formally verified and modular tool which fully automatically checks the correctness of finite-precision roundoff error bounds encoded in a certificate. We present implementations of certificate generation and checking for both Coq and HOL4 and evaluate it on a number of examples from the literature. The experiments use both in-logic evaluation of Coq and HOL4, and execution of extracted code outside of the logics. We benchmark Coq extracted unverified OCaml code and a CakeML-generated verified binary.
+
+- authors: Heiko Becker, Pavel Pancheckha, Eva Darulova, and Zachary Tatlock
+  title: Combining Tools for Optimization and Analysis of Floating-Point Computations
+  year: 2018
+  conference: International Symposium on Formal Methods (FM)
+  abstract: Recent renewed interest in optimizing and analyzing floating-point programs has lead to a diverse array of new tools for numerical programs. These tools are often complementary, each focusing on a distinct aspect of numerical programming. Building reliable floating point applications typically requires addressing several of these aspects, which makes easy composition essential. This paper describes the composition of two recent floating-point tools; Herbie, which performs accuracy optimization, and Daisy, which performs accuracy verification. We find that the combination provides numerous benefits to users, such as being able to use Daisy to check whether Herbie's unsound optimizations improved the worst-case roundoff error, as well as benefits to tool authors, including uncovering a number of bugs in both tools. The combination also allowed us to compare the different program rewriting techniques implemented by these tools for the first time. The paper lays out a road map for combining other floating-point tools and for surmounting common challenges.
+
+- authors: Heiko Becker, Pavel Pancheckha, Eva Darulova, and Zachary Tatlock
+  title: Combining Tools for Optimization and Analysis of Floating-Point Computations (Technical Report)
+  year: 2018
+  link: https://arxiv.org/pdf/1805.02436
+  conference: arXiv preprint
+  abstract: Recent renewed interest in optimizing and analyzing floating-point programs has lead to a diverse array of new tools for numerical programs. These tools are often complementary, each focusing on a distinct aspect of numerical programming. Building reliable floating point applications typically requires addressing several of these aspects, which makes easy composition essential. This paper describes the composition of two recent floating-point tools; Herbie, which performs accuracy optimization, and Daisy, which performs accuracy verification. We find that the combination provides numerous benefits to users, such as being able to use Daisy to check whether Herbie's unsound optimizations improved the worst-case roundoff error, as well as benefits to tool authors, including uncovering a number of bugs in both tools. The combination also allowed us to compare the different program rewriting techniques implemented by these tools for the first time. The paper lays out a road map for combining other floating-point tools and for surmounting common challenges.
+
+- authors: Eva Darulova, Anastasiia Izycheva, Fariha Nasir, Fabian Ritter, Heiko Becker, and Robert Bastian
+  title: Daisy-Framework for Analysis and Optimization of Numerical Programs (Tool Paper)
+  year: 2018
+  conference: International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS)
+  link: https://people.mpi-sws.org/~eva/papers/tacas18_daisy_toolpaper.pdf
+
 - authors: Heiko Becker, Eva Darulova and Magnus O. Myreen
   title: A Verified Certificate Checker for Floating-Point Error Bounds
   conference: ArXiv e-print
