--- a/_data/teaching.yaml
+++ b/_data/teaching.yaml
@@ -3,7 +3,7 @@
 
 - start: March 2018
   end: November 2018
-  what: Co-advised <a href="http://software.imdea.org/people/nikita.zyuzin/index.html">Nikita Zyuzin</a> during his Masters at MPI-SWS. The goal of the master thesis was to extend FloVer with a formalization of affine arithmetic and implement new certificate checking functions that use affine arithmetic to compute tighter bounds.
+  what: Co-advised <a href="http://software.imdea.org/~nikita.zyuzin">Nikita Zyuzin</a> during his Masters at MPI-SWS. The goal of the master thesis was to extend FloVer with a formalization of affine arithmetic and implement new certificate checking functions that use affine arithmetic to compute tighter bounds.
 
 - start: January 2017
   end: June 2017
