--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,15 @@
 # in the templates via {{ site.myvariable }}.
 name: Heiko Becker
 title: Personal Blog
-email: your-email@example.com
+# the subpath of your site, e.g. /blog
+baseurl: ""
+# the base hostname & protocol for your site, e.g. http://example.com
+#url: "https://heikobecker.github.io"
+# email: your-email@example.com
 #description: >- # this means to ignore newlines until "baseurl:"
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
-#baseurl: "" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
