Add nathaniel, fix typo

--- a/_data/teaching.yaml
+++ b/_data/teaching.yaml
@@ -1,3 +1,7 @@
+- start: May 2019
+  end: August 2019
+  what: Advised Nathaniel Bos during his DAAD-funded internship. The goal of the internship was to develop a natural language interface for proofs in the HOL4 interactive theorem prover.
+
 - start: March 2019
   end: April 2019
   what: Teaching assistant for blockseminar on "Advanced Program Analysis"
@@ -13,8 +17,8 @@
   end: June 2017
   what: Co-advised <a target="_BLANK" href="http://rmonat.fr/">Raphael Monat</a> during his internship at MPI-SWS. The goal of the internship was to extend FloVer with support for mixed-precision verification.
 
-- start: Summer Term 2017
+- when: Summer Term 2017
   what: Teaching assistant for Static Program Analysis course
 
-- start: Summer Term 2014, Summer Term 2013
+- when: Summer Term 2014, Summer Term 2013
   what: Student assistant for lecture Programmierung 2
