Clean up links, update with newest information

--- a/_data/talks.yaml
+++ b/_data/talks.yaml
@@ -1,2 +1,2 @@
-- link: assets/pdfs/Lightning Talk DSSS17.pdf
+- link: https://calendar.mpi-sws.org/index.php/s/Yr95g7zrfH8fKPA
   title: Lightning Talk at DeepSpec Summer School 2017
