--- a/_data/talks.yaml
+++ b/_data/talks.yaml
@@ -1,2 +1,7 @@
 - link: https://calendar.mpi-sws.org/index.php/s/Yr95g7zrfH8fKPA
   title: Lightning Talk at DeepSpec Summer School 2017
+- link: https://calendar.mpi-sws.org/index.php/s/T8HAD4DdEC6AfdS
+  title: Talk at Universite de Nantes and LRI
+- link: https://cloud.mpi-sws.org/index.php/s/9rFynwwm4PY2PDS
+  title: Flash Talk at FPTalks 2020
+  video: https://youtu.be/pS5JWndz7tM
