--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,6 +1,20 @@
+- authors: Heiko Becker, Mohit Tekriwal, Eva Darulova, Anastasia Volkova, and Jean-Baptiste Jeannin
+  title: "Dandelion: Certified Approximations of Elementary Functions (Under publication)"
+  conference: Interactive Theorem Proving (ITP)
+  year: 2022
+  link: https://arxiv.org/abs/2202.05472
+  abstract: "Elementary function operations such as sin and exp cannot in general be computed exactly on today's digital computers, and thus have to be approximated. The standard approximations in library functions typically provide only a limited set of precisions, and are too inefficient for many applications. Polynomial approximations that are customized to a limited input domain and output accuracy can provide superior performance. In fact, the Remez algorithm computes the best possible approximation for a given polynomial degree, but has so far not been formally verified.\n This paper presents Dandelion, an automated certificate checker for polynomial approximations of elementary functions computed with Remez-like algorithms that is fully verified in the HOL4 theorem prover. Dandelion checks whether the difference between a polynomial approximation and its target reference elementary function remains below a given error bound for all inputs in a given constraint. By extracting a verified binary with the CakeML compiler, Dandelion can validate certificates within a reasonable time, fully automating previous manually verified approximations."
+
+- authors: Heiko Becker, Robert Rabe, Eva Darulova, Magnus O. Myreen, Zachary Tatlock, Ramana Kumar, Yong Kiam Tan, and Anthony Fox
+  title: "Verified Compilation and Optimization of Floating-Point Programs in CakeML (Under publication)"
+  conference: European Conference on Object-Oriented Programming
+  year: 2022
+  link: https://2022.ecoop.org/details/ecoop-2022-papers/2/Verified-Compilation-and-Optimization-of-Floating-Point-Programs-in-CakeML
+  abstract: "Verified compilers such as CompCert and CakeML have become increasingly realistic over the last few years, but their support for floating-point arithmetic has thus far been limited. In particular, they lack the “fast-math-style” optimizations that unverified mainstream compilers perform. Supporting such optimizations in the setting of verified compilers is challenging because these optimizations, for the most part, do not preserve the IEEE-754 floating-point semantics. However, IEEE-754 floating-point numbers are finite approximations of the real numbers, and we argue that any compiler correctness result for fast-math optimizations should appeal to a real-valued semantics rather than the rigid IEEE-754 floating-point numbers.\n This paper presents RealCake, an extension of CakeML that achieves end-to-end correctness results for fast-math-style optimized compilation of floating-point arithmetic. This result is achieved by giving CakeML a flexible floating-point semantics and integrating an external proof-producing accuracy analysis. RealCake’s end-to-end theorems relate the I/O behavior of the original source program under real-number semantics to the observable I/O behavior of the compiler generated and fast-math-optimized machine code."
+
 - authors: Heiko Becker, Nathaniel Bos, Ivan Gavran, Eva Darulova, and Rupak Majumdar
-  title: "Lassie: HOL4 Tactics by Example (Under publication)"
-  conference: International Conference on Certified Programs and Proofs (CPP)
+  title: "Lassie: HOL4 Tactics by Example"
+  conference: Certified Programs and Proofs (CPP)
   year: 2021
   link: https://cloud.mpi-sws.org/index.php/s/XKy3Aa2BPNPXyiW
   slides: https://cloud.mpi-sws.org/index.php/s/nYxWg7RZiZfTFxZ
@@ -21,7 +35,7 @@ We present Lassie, a tactic framework for the HOL4 theorem prover that allows in
 
 - authors: Heiko Becker, Eva Darulova, Magnus O. Myreen, and Zachary Tatlock
   title: Icing - Supporting Fast-math Style Optimizations in a Verified Compiler
-  conference: International Conference on Computer-Aided Verification (CAV)
+  conference: Computer-Aided Verification (CAV)
   year: 2019
   link: https://cloud.mpi-sws.org/index.php/s/k7ANbNNXEjZPjed
   slides: https://cloud.mpi-sws.org/index.php/s/4MjMnrp42azFHeq
